--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.10",
+    "aos": "^2.3.4",
     "axios": "^1.10.0",
     "country-state-city": "^3.2.1",
     "framer-motion": "^12.23.6",
