--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "html-to-image": "^1.11.13",
     "jwt-decode": "^4.0.0",
     "lineicons": "^1.3.2",
+    "lucide-react": "^0.545.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
